--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -1,140 +1,113 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<title>Game View</title>
-	<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-		  crossorigin="anonymous">
-	<link type="text/css" rel="stylesheet" href="style/game.css">
+  <meta charset="UTF-8">
+  <title>Ship Locations</title>
+
+  <!-- Bootstrap 3 & Jquery -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  <!-- Font awsome icon -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+
+  <!-- Estilos usuario -->
+  <link rel="stylesheet" href="styles/styles.css">
+
+  <script src="scripts/game.js"></script>
 </head>
-
 <body>
-<div id="app" class="backgroundColor">
-	<header class="container-fluid">
-		<div class="row pt-2">
-			<span class="headline display-4 col-5" id="nameDisplayPL"></span><span class="headline display-4 col-2">VS</span><span
-				class="headline display-4 col-5" id="nameDisplayOPP"></span>
-		</div>
-	</header>
 
-	<div id="gameStatus" class="gameStatus pb-1 pt-1 mt-2">
-		<h4 class="m-0 statusText" id="gameStatusText"> Status: {{gameStatus}}</h4>
-	</div>
+<div class="container-fluid">
 
-	<div class="container-fluid mb-2">
-		<div class="row text-center" id="shipsToPlace" v-if="ships.length == 0">
-			<div class="placeShipWrapper">
-				<h5 class="shipName">Carrier</h5>
-				<div>
-					<button id="carrier" class="btn btnColor btn-sm" v-on:click="placing('carrier')" v-show="carrier">Horizontal</button>
-					<button id="carrierVertical" class="btn btnColor btn-sm" v-on:click="placing('carrierVertical')"
-							v-show="carrierVertical">Vertical</button>
-					<button id="cancelCarrier" class="btn cancelBtnColor btn-sm" v-on:click="cancelShip('carrier')"
-							v-show="cancelCarrier">Cancel placement</button>
-				</div>
-			</div>
-			<div class="placeShipWrapper">
-				<h5 class="shipName">Battle Ship</h5>
-				<div>
-					<button id="battleShip" class="btn btnColor btn-sm" v-on:click="placing('battleShip')" v-show="battleShip">Horizontal</button>
-					<button id="battleVertical" class="btn btnColor btn-sm" v-on:click="placing('battleVertical')"
-							v-show="battleVertical">Vertical</button>
-					<button id="cancelBattleShip" class="btn cancelBtnColor btn-sm" v-on:click="cancelShip('battle ship')"
-							v-show="cancelBattleShip">Cancel placement</button>
-				</div>
-			</div>
-			<div class="placeShipWrapper">
-				<h5 class="shipName">Submarine</h5>
-				<div>
-					<button id="submarine" class="btn btnColor btn-sm" v-on:click="placing('submarine')" v-show="submarine">Horizontal</button>
-					<button id="submarineVertical" class="btn btnColor btn-sm" v-on:click="placing('submarineVertical')"
-							v-show="submarineVertical">Vertical</button>
-					<button id="cancelSubmarine" class="btn cancelBtnColor btn-sm" v-on:click="cancelShip('submarine')"
-							v-show="cancelSubmarine">Cancel placement</button>
-				</div>
-			</div>
-			<div class="placeShipWrapper">
-				<h5 class="shipName">Destroyer</h5>
-				<div>
-					<button id="destroyer" class="btn btnColor btn-sm" v-on:click="placing('destroyer')" v-show="destroyer">Horizontal</button>
-					<button id="destroyerVertical" class="btn btnColor btn-sm" v-on:click="placing('destroyerVertical')"
-							v-show="destroyerVertical">Vertical</button>
-					<button id="cancelDestroyer" class="btn cancelBtnColor btn-sm" v-on:click="cancelShip('destroyer')"
-							v-show="cancelDestroyer">Cancel placement</button>
-				</div>
-			</div>
-			<div class="placeShipWrapper">
-				<h5 class="shipName">Patrol Boat</h5>
-				<div>
-					<button id="patrolBoat" class="btn btnColor btn-sm" v-on:click="placing('patrolBoat')" v-show="patrolBoat">Horizontal</button>
-					<button id="partolVertical" class="btn btnColor btn-sm" v-on:click="placing('partolVertical')"
-							v-show="partolVertical">Vertical</button>
-					<button id="cancelPatrolBoat" class="btn cancelBtnColor btn-sm" v-on:click="cancelShip('patrol boat')"
-							v-show="cancelPatrolBoat">Cancel placement</button>
-				</div>
-			</div>
-		</div>
-	</div>
+  <!-- Modal Info http respuesta -->
+  <div class="modal fade" id="modalInfo">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-body httpError"></div>
+      </div>
+    </div>
+  </div>
 
-	<div class="container-fluid">
-		<div class="row mt-2 d-flex flex-sm-column flex-md-row" id="marginTopChanging">
-			<div class="col-sm-10 col-md-5 m-auto p-0" id="tablePlayer">
-				<div id="sendShipsBtn" class="text-center sendBtnWrapper" v-show="sendShipsBtn">
-					<button class="btn sendShipsBtn btn-sm" v-on:click="postShips()">
-						Send Ships</button>
-				</div>
-				<table class="m-auto">
-					<tbody>
-					<tr>
-						<td v-for="column in columns" class="gridBox">{{column}}</td>
-					</tr>
-					<tr v-for="(row, counter) in rows">
-						<td class="gridBox">{{row}}</td>
-						<td v-for="(row, index) in rows" class="gridBox" data-field="boxForShip" :id='getId(counter, index, "pl")'></td>
-					</tr>
-					</tbody>
-				</table>
-			</div>
-			<div class="col-xs-6 col-md-2 p-0 middleSection" id="middleSection" >
-				<div class="text-center" id="salvoButtons" v-show="ships.length === 5">
-					<button id="salvosBtn" class="btn btnColor" v-on:click="placingSalvos()" v-show="salvosBtn">Salvos</button>
-					<button id="fireSalvosBtn" class="btn cancelBtnColor px-4" v-on:click="postSalvos()" v-show="fireSalvosBtn">Fire</button>
-				</div>
-				<div class="d-flex flex-column" id="displayShipsWrapper">
-					<div class="d-flex flex-column" v-for="(ship, index) in ships">
-						<p class="m-0 font-weight-bold" v-bind:id="'shipName'+index"></p>
-						<div v-bind:class="'shipBox'+index" class="d-flex flex-row" v-bind:id="'shipBox'+index">
+  <!-- Navbar Login/SignUp/Logout -->
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <ul class="nav navbar-nav logoutGames navbar-right">
+        <li><span class="iconUserLogin "><i class="fas fa-user"></i><span class="txtUserLogin"></span></span></li>
+      </ul>
+      <ul class="nav navbar-nav logoutGames">
+        <li>
+          <a href="#" onClick="history.go(-1)" class="back_page"><< Back</a>
+        </li>
+        <li>
+          <form action="">
+            <button type="button" id="logout_player" class="btn btn-danger navbar-btn">Logout</button>
+          </form>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-10 col-md-5 p-0" id="tableOpponent">
-				<table class="m-auto">
-					<tbody>
-					<tr>
-						<td v-for="column in columns" class="gridBox">{{column}}</td>
-					</tr>
-					<tr v-for="(row, counter) in rows">
-						<td class="gridBox">{{row}}</td>
-						<td v-for="(row, index) in rows" class="gridBox" data-field="boxForSalvo" :id='getId(counter, index, "opp")'></td>
-					</tr>
-					</tbody>
-				</table>
-			</div>
-		</div>
-	</div>
-
+  <div class="row">
+    <h1></h1>
+    <div class="col-md-12 boxState">
+      <div class="boxStateGame"></div>
+    </div>
+    <div class="col-md-4 marginBottom-sm">
+      <h3 class="heading__3 local"></h3>
+      <table class="tableLocal">
+        <thead id="table-headers-l">
+        </thead>
+        <tbody id="table-rows-l" data-box="grid">
+        </tbody>
+      </table>
+    </div>
+    <div class="col-md-4 listaShips marginBottom-sm">
+      <div class="boxLista">
+        <button id="save_Ships" class="btn btn-success">Save</button>
+        <div id="listShips" data-box="origen">
+          <div class="spCarrier itemShip" data-pos="hor" draggable="true" id="drag1"></div>
+          <div class="spBattleship itemShip" data-pos="hor" draggable="true" id="drag2"></div>
+          <div class="spSubmarine itemShip" data-pos="hor" draggable="true" id="drag3"></div>
+          <div class="spDestroyer itemShip" data-pos="hor" draggable="true" id="drag4"></div>
+          <div class="spPatrolBoat itemShip" data-pos="hor" draggable="true" id="drag5"></div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 boxEnemy marginBottom-sm">
+      <h3 class="heading__3 oponent"></h3>
+      <p class="fail"></p>
+      <table class="tableOponent">
+        <thead id="table-headers-v">
+        </thead>
+        <tbody id="table-rows-v">
+        </tbody>
+      </table>
+      <button id="save_Salvos" class="btn btn-succes">Salvos</button>
+    </div>
+    <div class="col-md-4 boxHistory marginBottom-sm">
+      <div class="boxTableHistory">
+        <h3 class="heading__3"><span id="gamePlay"> - History Hits/Skin </span></h3>
+        <table class="table tableHits">
+          <thead id="theadHits"></thead>
+          <tbody id="tbodyHits"></tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  <div class="row marginTop-gm">
+    <div class="container-fluid">
+      <div class="footer">
+        <div class="footer__box">
+          <span class="footer__box--copy">&copy; 2019 Battleship Game</span>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-<script src="https://unpkg.com/vue/dist/vue.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-		crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-		crossorigin="anonymous"></script>
-<script src="scripts/game.js"></script>
-</body>
 
+</body>
 </html>
